JumpScript/tests/baselines/reference/templateStringBinaryOperationsES6Invalid.errors.txt
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(1,13): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(2,13): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(3,13): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(4,13): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(5,9): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(6,9): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(7,9): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(8,9): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(10,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(11,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(12,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(13,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(14,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(15,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(16,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(17,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(19,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(20,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(21,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(22,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(23,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(24,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(25,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(26,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(28,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(29,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(30,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(31,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(32,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(33,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(34,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(35,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(37,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(38,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(39,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(40,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(41,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(42,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(43,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(44,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(46,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(47,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(48,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(49,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(50,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(51,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(52,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(53,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(55,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(56,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(57,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(58,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(59,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(60,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(61,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(62,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(64,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(65,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(66,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(67,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(68,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(69,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(70,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(71,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(73,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(74,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(75,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(76,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(77,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(78,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(79,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(80,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(82,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(83,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(84,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(85,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(86,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(87,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(88,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(89,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(91,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(92,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(93,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(94,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(95,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(96,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(97,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(98,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(100,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(101,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(102,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(103,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(104,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(105,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(106,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump(107,10): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.


==== tests/cases/conformance/es6/templates/templateStringBinaryOperationsES6Invalid.jump (96 errors) ====
    var a = 1 - `${ 3 }`;
                ~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var b = 1 - `2${ 3 }`;
                ~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var c = 1 - `${ 3 }4`;
                ~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var d = 1 - `2${ 3 }4`;
                ~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var e = `${ 3 }` - 5;
            ~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var f = `2${ 3 }` - 5;
            ~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var g = `${ 3 }4` - 5;
            ~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var h = `2${ 3 }4` - 5;
            ~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var a2 = 1 * `${ 3 }`;
                 ~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var b2 = 1 * `2${ 3 }`;
                 ~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var c2 = 1 * `${ 3 }4`;
                 ~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var d2 = 1 * `2${ 3 }4`;
                 ~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var e2 = `${ 3 }` * 5;
             ~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var f2 = `2${ 3 }` * 5;
             ~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var g2 = `${ 3 }4` * 5;
             ~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var h2 = `2${ 3 }4` * 5;
             ~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var a3 = 1 & `${ 3 }`;
                 ~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var b3 = 1 & `2${ 3 }`;
                 ~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var c3 = 1 & `${ 3 }4`;
                 ~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var d3 = 1 & `2${ 3 }4`;
                 ~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var e3 = `${ 3 }` & 5;
             ~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var f3 = `2${ 3 }` & 5;
             ~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var g3 = `${ 3 }4` & 5;
             ~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var h3 = `2${ 3 }4` & 5;
             ~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var a4 = 1 - `${ 3 - 4 }`;
                 ~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var b4 = 1 - `2${ 3 - 4 }`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var c4 = 1 - `${ 3 - 4 }5`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var d4 = 1 - `2${ 3 - 4 }5`;
                 ~~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var e4 = `${ 3 - 4 }` - 6;
             ~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var f4 = `2${ 3 - 4 }` - 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var g4 = `${ 3 - 4 }5` - 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var h4 = `2${ 3 - 4 }5` - 6;
             ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var a5 = 1 - `${ 3 * 4 }`;
                 ~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var b5 = 1 - `2${ 3 * 4 }`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var c5 = 1 - `${ 3 * 4 }5`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var d5 = 1 - `2${ 3 * 4 }5`;
                 ~~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var e5 = `${ 3 * 4 }` - 6;
             ~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var f5 = `2${ 3 * 4 }` - 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var g5 = `${ 3 * 4 }5` - 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var h5 = `2${ 3 * 4 }5` - 6;
             ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var a6 = 1 - `${ 3 & 4 }`;
                 ~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var b6 = 1 - `2${ 3 & 4 }`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var c6 = 1 - `${ 3 & 4 }5`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var d6 = 1 - `2${ 3 & 4 }5`;
                 ~~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var e6 = `${ 3 & 4 }` - 6;
             ~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var f6 = `2${ 3 & 4 }` - 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var g6 = `${ 3 & 4 }5` - 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var h6 = `2${ 3 & 4 }5` - 6;
             ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var a7 = 1 * `${ 3 - 4 }`;
                 ~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var b7 = 1 * `2${ 3 - 4 }`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var c7 = 1 * `${ 3 - 4 }5`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var d7 = 1 * `2${ 3 - 4 }5`;
                 ~~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var e7 = `${ 3 - 4 }` * 6;
             ~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var f7 = `2${ 3 - 4 }` * 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var g7 = `${ 3 - 4 }5` * 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var h7 = `2${ 3 - 4 }5` * 6;
             ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var a8 = 1 * `${ 3 * 4 }`;
                 ~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var b8 = 1 * `2${ 3 * 4 }`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var c8 = 1 * `${ 3 * 4 }5`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var d8 = 1 * `2${ 3 * 4 }5`;
                 ~~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var e8 = `${ 3 * 4 }` * 6;
             ~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var f8 = `2${ 3 * 4 }` * 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var g8 = `${ 3 * 4 }5` * 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var h8 = `2${ 3 * 4 }5` * 6;
             ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var a9 = 1 * `${ 3 & 4 }`;
                 ~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var b9 = 1 * `2${ 3 & 4 }`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var c9 = 1 * `${ 3 & 4 }5`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var d9 = 1 * `2${ 3 & 4 }5`;
                 ~~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var e9 = `${ 3 & 4 }` * 6;
             ~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var f9 = `2${ 3 & 4 }` * 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var g9 = `${ 3 & 4 }5` * 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var h9 = `2${ 3 & 4 }5` * 6;
             ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var aa = 1 & `${ 3 - 4 }`;
                 ~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ba = 1 & `2${ 3 - 4 }`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ca = 1 & `${ 3 - 4 }5`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var da = 1 & `2${ 3 - 4 }5`;
                 ~~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ea = `${ 3 - 4 }` & 6;
             ~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var fa = `2${ 3 - 4 }` & 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ga = `${ 3 - 4 }5` & 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ha = `2${ 3 - 4 }5` & 6;
             ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var ab = 1 & `${ 3 * 4 }`;
                 ~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var bb = 1 & `2${ 3 * 4 }`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var cb = 1 & `${ 3 * 4 }5`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var db = 1 & `2${ 3 * 4 }5`;
                 ~~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var eb = `${ 3 * 4 }` & 6;
             ~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var fb = `2${ 3 * 4 }` & 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var gb = `${ 3 * 4 }5` & 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var hb = `2${ 3 * 4 }5` & 6;
             ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var ac = 1 & `${ 3 & 4 }`;
                 ~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var bc = 1 & `2${ 3 & 4 }`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var cc = 1 & `${ 3 & 4 }5`;
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var dc = 1 & `2${ 3 & 4 }5`;
                 ~~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var ec = `${ 3 & 4 }` & 6;
             ~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var fc = `2${ 3 & 4 }` & 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var gc = `${ 3 & 4 }5` & 6;
             ~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var hc = `2${ 3 & 4 }5` & 6;
             ~~~~~~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    